<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".actitvities.DeletedList">
    <LinearLayout
        android:id="@+id/DeletedListTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backToMainFromDeletedList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/app_name"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/colorWhite" />
        <TextView
            android:id="@+id/DeletedListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/bold"
            android:includeFontPadding="false"
            android:text="@string/deleted_notes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <TextView
        android:id="@+id/editDeletedList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/edit"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sdp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DeletedListTitleLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editDeletedList"
        app:layout_constraintBottom_toTopOf="@id/layoutDeleteAndRestore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layoutDeleteAndRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_23sdp"
            android:text="@string/delete_all"
            android:layout_weight="1"
            android:gravity="start"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/restoreAll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_23sdp"
            android:text="@string/restore_all"
            android:layout_weight="1"
            android:gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>