<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actitvities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textMyNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/bold"
            android:includeFontPadding="false"
            android:text="@string/my_notes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNoteCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/medium"
            android:includeFontPadding="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/textMyNotes" />

        <ImageView
            android:id="@+id/imageMoreVert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_menu_24"
            app:tint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textMyNotes"
            app:layout_constraintBottom_toBottomOf="@id/textMyNotes"
            android:onClick="openMenu" />

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/textNoteCount">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_search_24"
                app:tint="@color/colorSearchIcon"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/inputsearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/regular"
                android:hint="@string/search_your_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

        <LinearLayout
            android:id="@+id/layoutQuickActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorQuickActionsBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <!--<ImageView
                android:id="@+id/imageAddNote"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_add_circle_outline_24"
                app:tint="@color/colorIcons" />-->
            <ImageView
                android:id="@+id/imageAddImage"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_image_24"
                app:tint="@color/colorIcons" />
            <ImageView
                android:id="@+id/imageAddWebLink"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_language_24"
                app:tint="@color/colorIcons" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageAddNoteMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
            app:tint="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:layout_constraintWidth_percent="0.5" />

</androidx.drawerlayout.widget.DrawerLayout>